--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,6 +1,6 @@
 html,
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height: 100%;
 }
 .navbar {
@@ -66,4 +66,13 @@ body {
         transform: rotate(360deg);
     }
 }
-
+#app-background{
+    background: url(https://4.bp.blogspot.com/-2hqBN7VRQro/TdplnjzNq4I/AAAAAAAAACE/tZ-tCjHOeTA/s1600/0511-0811-0316-4957_Cartoon_of_a_Singing_Duet_clipart_image.png) no-repeat center center fixed;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
